--- a/index.html
+++ b/index.html
@@ -4,7 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>💜</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta name="description" content="It's Mox!">
+    
+	<!-- OG Meta Tags -->
+    <meta property="og:url" content="https://monti.ppstar.art">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="💜">
+    <meta property="og:description" content="">
+    <meta property="og:image" content="preview.png">
+    
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="monti.ppstar.art">
+    <meta property="twitter:url" content="https://monti.ppstar.art">
+    <meta name="twitter:title" content="💜">
+    <meta name="twitter:description" content="">
+    <meta name="twitter:image" content="preview.png">
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="gif-container">
