--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="💜">
     <meta property="og:description" content="">
-    <meta property="og:image" content="preview.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/AetCloud/monti-gif/refs/heads/main/preview.png">
     
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
@@ -19,7 +19,7 @@
     <meta property="twitter:url" content="https://monti.ppstar.art">
     <meta name="twitter:title" content="💜">
     <meta name="twitter:description" content="">
-    <meta name="twitter:image" content="preview.png">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/AetCloud/monti-gif/refs/heads/main/preview.png">
 
     <link rel="stylesheet" href="style.css">
 </head>
