--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>💜</title>
     <meta name="description" content="It's Mox!">
     
-	<!-- OG Meta Tags -->
+    <!-- OG Meta Tags -->
     <meta property="og:url" content="https://monti.ppstar.art">
     <meta property="og:type" content="website">
     <meta property="og:title" content="💜">
     <meta property="og:description" content="">
-    <meta property="og:image" content="https://raw.githubusercontent.com/AetCloud/monti-gif/refs/heads/main/preview.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/AetCloud/monti-gif/main/preview.png">
     
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
@@ -19,13 +19,15 @@
     <meta property="twitter:url" content="https://monti.ppstar.art">
     <meta name="twitter:title" content="💜">
     <meta name="twitter:description" content="">
-    <meta name="twitter:image" content="https://raw.githubusercontent.com/AetCloud/monti-gif/refs/heads/main/preview.png">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/AetCloud/monti-gif/main/preview.png">
 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="gif-container">
-        <img id="gif" src="monti.gif" alt="GIF" crossorigin="anonymous">
+    <div id="content"> <!-- New container to help centering -->
+        <div id="gif-container">
+            <img id="gif" src="monti.gif" alt="GIF">
+        </div>
     </div>
 
     <!-- Load Color Thief Library -->
