--- a/index.html
+++ b/index.html
@@ -21,17 +21,15 @@
     <meta name="twitter:description" content="">
     <meta name="twitter:image" content="https://raw.githubusercontent.com/AetCloud/monti-gif/main/preview.png">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="content"> <!-- New container to help centering -->
+    <div id="content">
         <div id="gif-container">
             <img id="gif" src="monti.gif" alt="GIF">
         </div>
     </div>
 
-    <!-- Load Color Thief Library -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.2/color-thief.umd.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
